--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
 
 env:
   global:
+    - DOCKERHUB_USER=dpossart
     - IMAGE_NAME=${DOCKERHUB_USER}/wahlzeit
     - IMAGE_NAME_TAGGED=${DOCKERHUB_USER}/wahlzeit:${TRAVIS_TAG}
 
